CVS code -
- nano.c:
  main()
	- Move the call to raw() on systems that don't define
	  _POSIX_VDISABLE outside the main input/output loop, as it
	  doesn't need to be called every time through the loop. (DLR)
- README:
	- Reformat to 72 characters per line, fix wording in one spot,
	  and fix spacing in several spots. (DLR)

GNU nano 1.3.1 - 2004.01.09
- General:
	- Minor overhaul and abstraction of the lowest level of mouse
	  input, mostly adapted from the code in do_mouse() that handles
	  clicking on the shortcut list.  New function do_mouseinput();
	  changes to do_mouse(). (DLR)  David Benbennick: Add a few
	  efficiency/extensibility tweaks.
	- Modify the shortcut structure so that instead of having two
	  miscellaneous key values (misc1 and misc2), there is one key
	  value reserved for function keys (func_key) and one
	  miscellaneous key value (misc), and tweak the
	  shortcut-handling code to deal with this.  These changes allow
	  NANO_OPEN(PREV|NEXT)_ALTKEY to work properly when added to the
	  shortcut entries for NANO_OPEN(PREV|NEXT)_KEY.  Also remove
	  the values in the shortcut list and elsewhere that were made
	  redundant by the low-level input overhaul, use toupper()
	  instead of subtracting 32 from values for greater code
	  readability, and eliminate use of adding 32 to values when
	  testing for toggles, as get_kbinput_accepted() converts toggle
	  values to lowercase before returning them. (DLR)
	- Remove the workarounds for missing KEY_UP and KEY_DOWN, as
	  they appear to be holdovers of the old way of denoting the
	  search history shortcuts; if they aren't defined, KEY_LEFT and
	  KEY_RIGHT probably shouldn't work either, and all four appear
	  to be standard keys in termcap/terminfo in any case.  Add new
	  special sentinel key values NANO_NO_KEY (for no shortcut key)
	  and NANO_HISTORY_KEY (for search history keys, both Up and
	  Down), modify the shortcut list to use them, and modify the